--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
     <th>代表者</th>
     <td>山田太郎</td>
   </tr>
-</table>
-<table>
   <tr>
     <th>所在地</th>
     <td>東京都渋谷区神宮前</td>
@@ -41,8 +39,6 @@
     <th>設立</th>
     <td>2019/7/17</td>
   </tr>
-</table>
-<table>
   <tr>
     <th>従業員数</th>
     <td>100人</td>
@@ -51,29 +47,22 @@
     <th>資本金</th>
     <td>1000万円</td>
   </tr>
-</table>
+  </table>
 <h2>お問い合わせ</h2>
 <from action="detail.html" method="get">
   <label>
     会社名:<input type="text" name="name">
   </label>
-</from>
-<from action="detail.html" method="get">
   <label>
     <br>お名前:<input type="text" name="name">
   </label>
-</from>
-<from action="detail.html" method="get">
   <label>
     <br>メールアドレス:<input type="text" name="name">
   </label>
-</from>
-
-<from action="detail.html" method="get">
   <label>
     <br>お問い合わせ内容
   </label>
   <textarea name="textarea" cols="50" rows="10"></textarea>
 </from>
   <br><button type="submit">お申し込み</button>
-<p>&COPY;2020 TECH ink</p>
+<small><p>&COPY;2020 TECH ink</p></small>
