--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </tr>
   </table>
 <h2>お問い合わせ</h2>
-<from action="detail.html" method="get">
+<form action="detail.html" method="get">
   <label>
     会社名:<input type="text" name="name">
   </label>
@@ -63,6 +63,6 @@
     <br>お問い合わせ内容
   </label>
   <textarea name="textarea" cols="50" rows="10"></textarea>
-</from>
+</form>
   <br><button type="submit">お申し込み</button>
 <small><p>&COPY;2020 TECH ink</p></small>
